kubernetes/deployment-service-event.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: event-booking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: your-dockerhub-username/event-service:latest
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: event-booking
spec:
  selector:
    app: event-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
