kubernetes/deployment-service-userserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-server
  namespace: event-booking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-server
  template:
    metadata:
      labels:
        app: user-server
    spec:
      containers:
        - name: user-server
          image: your-dockerhub-username/user-server:latest
          ports:
            - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: user-server
  namespace: event-booking
spec:
  selector:
    app: user-server
  ports:
    - protocol: TCP
      port: 5004
      targetPort: 5004
  type: ClusterIP
